# jimtcl

./: .gdbinit  .gitignore  .indent.pro  .project  .travis.yml  AUTHORS  BUGS  CONTRIBUTING.md  COPYING  ChangeLog  DEVELOPING  Dockerfile  JimTCL.sln  JimTCL.vcxproj  LICENSE  Makefile  Makefile.in  Makefile.vc  README  README.ensemble  README.extensions  README.linenoise  README.metakit  README.namespaces  README.oo  README.redis  README.sqlite  README.taint  README.utf-8  STYLE  TODO  Tcl.html_shipped  Tcl_shipped.html  UpgradeLog.htm  appveyor.yml  array.tcl  auto.def  autoconf.h.in  bench.tcl  binary.tcl  (+104 more)
.github/workflows/: codeql.yml  fail_on_error.py  makefile.yml
about/: index.html
articles/: index.html
articles/2010-09-09/: index.html
articles/2010-10-29/: index.html
articles/2010-11-03/: index.html
articles/2010-11-15/: index.html
articles/2010-11-24/: index.html
articles/2011-04-14/: index.html
articles/2011-04-22/: index.html
articles/2011-04-24/: index.html
articles/binary-cheatsheet/: index.html
articles/bootstrap-jimsh/: index.html
articles/jim-is-modular/: index.html
articles/jim-release-0-71/: index.html
articles/jim-release-0-72/: index.html
articles/jim-release-0-73/: index.html
articles/jim-release-0-74/: index.html
articles/jim-release-0-75/: index.html
articles/jim-release-0-76/: index.html
articles/jim-release-0-77/: index.html
articles/jim-release-0-78/: index.html
articles/jim-release-0-79/: index.html
articles/jim-release-0-80/: index.html
articles/jim-release-0-81/: index.html
articles/jim-release-0-82/: index.html
articles/jim-release-0-83/: index.html
articles/jim-sqlite-shell/: index.html
articles/jim-tcl-tk-2011-paper/: index.html
articles/light-weight-namespaces/: index.html
articles/metakit-extension/: index.html
articles/move-to-github/: index.html
articles/new-comment-system/: index.html
articles/no-namespaces/: index.html
articles/no-namespaces-revisited/: index.html
articles/sdl2-support/: index.html
autosetup/: README.autosetup  autosetup  autosetup-find-tclsh  cc-db.tcl  cc-lib.tcl  cc-shared.tcl  cc.tcl  config.guess  config.sub  find-tclsh  jim-misc.auto  jimsh0.c  jimtcl_bootstrap.vcxproj  local.tcl  pkg-config.tcl  system.tcl  test-tclsh  tmake.tcl
css/: sh_style.css  style.css
debian/: changelog  control  copyright  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  jimtcl.cron.d.ex  jimtcl.default.ex  jimtcl.doc-base.EX  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
doc/: AIO-Extension.txt  Makefile  Sqlite-Extension.txt  Tcl.html.supplied  jim_man.txt  jim_tcl.txt  make-index
documentation/: index.html
documentation/functional/: index.html
documentation/metakit/: index.html
documentation/oo/: index.html
documentation/sqlite/: index.html
documentation/utf8/: index.html
download/: index.html
ecos/: ecos.db  update.sh
ecos/language/tcl/jim/current/: ChangeLog
ecos/language/tcl/jim/current/cdl/: jimtcl.cdl
ecos/language/tcl/jim/current/doc/: jimtcl.sgml
ecos/language/tcl/jim/current/include/: jim-eventloop.h  jim.h
ecos/language/tcl/jim/current/src/: jim-aio.c  jim-eventloop.c  jim.c
examples/: Makefile  README  certificate.pem  client-server.tcl  dbgtest.tcl  debugscript.tcl  dns.tcl  dnstest.tcl  ffi.tcl  jcov  jim_command.c  jim_hello.c  jim_inline.c  jim_list.c  jim_obj.c  jim_return.c  jtclsh.tcl  jtime  jtrace  key.pem  metakit.tcl  nonblocking-gets.tcl  ootest.tcl  parray.tcl  pipe.tcl  popen.tcl  redis-async.tcl  redis-pubsub.tcl  redis.tcl  sdlcircles.tcl  sdlevents.tcl  sdltest.tcl  socket-show-filename.tcl  sqlite3.tcl  sqlite3test.tcl  ssl.client  ssl.server  tcp.client  tcp.server  timedread.tcl  (+11 more)
examples.api/: Makefile  Makefile.in  README  jim_command.c  jim_hello.c  jim_list.c  jim_obj.c  jim_return.c  print.tcl
examples.ext/: Makefile  README  helloworld.c
examples/error-lines/: after.tcl  eval.tcl  for.tcl  if.tcl  loop.tcl  main-body.tcl  proc.tcl  project.geany  uplevel.tcl
extensions/: index.html
javascript/: sh_lang.js  sh_main.min.js
jsmn/: jsmn.c  jsmn.h
license/: index.html
news/: index.html
sqlite3/: Makefile  README  build-ext  jim-sqlite.c  jim-sqlite3.c  sqlite3.h  test-sqlite.tcl  test-sqlite3.tcl
tcltests/: Makefile  runtests  test_bio.tcl  test_clientserver.tcl  test_eventloop.tcl  test_exec.tcl  test_lsort_cmd.tcl  test_package.tcl  test_read.tcl  test_signal.tcl  test_signal2.tcl  test_stdio.tcl  test_trysignal.tcl  test_upvararray.tcl  testmod.tcl
tests/: .jim_history  Makefile  Makefile.in  aio.test  alias.test  all_tests.tcl  apply.test  applyns.test  array.test  binary-all.test  binary-fmt.test  binary-scan.test  binary.test  breakcont.test  case.test  clock.test  concat.test  copy.out  coverage.test  debug.test  defer.test  dict.test  dict2.test  dummy.tcl  ensemble.test  error.test  errors.tcl  event.test  exec-tip424.test  exec.test  exec2.test  exists.test  exitpackage.tcl  expand.test  expect.tcl  expr-base.test  expr-new.test  expr-old.test  expr-pow.test  expr.test  (+83 more)
tools/: benchtable.tcl
tools/ci-test/: buildmk.sh  ci-test.sh  configure_everything.sh  coverage.sh  extra_tests.sh  lcov_parse.tcl  mk_fixes_2.4.9.7.patch  tclsh8.5  valgrind.supp
